Added Mk. 6 & Mk. 5 Effects