@@ -24,15 +24,15 @@ import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
-import net.maketendo.forgedreactor.client.model.Modelmk5_armor;
+import net.maketendo.forgedreactor.client.model.Modelmk6_armor;
 
 import java.util.function.Consumer;
 import java.util.Map;
 import java.util.List;
 import java.util.Collections;
 
-public abstract class Mk5IronArmorItem extends ArmorItem {
-	public Mk5IronArmorItem(ArmorItem.Type type, Item.Properties properties) {
+public abstract class Mk6IronArmorItem extends ArmorItem {
+	public Mk6IronArmorItem(ArmorItem.Type type, Item.Properties properties) {
 		super(new ArmorMaterial() {
 			@Override
 			public int getDurabilityForType(ArmorItem.Type type) {
@@ -61,7 +61,7 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 
 			@Override
 			public String getName() {
-				return "mk_5_iron_armor";
+				return "mk_6_iron_armor";
 			}
 
 			@Override
@@ -76,7 +76,7 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 		}, type, properties);
 	}
 
-	public static class Helmet extends Mk5IronArmorItem {
+	public static class Helmet extends Mk6IronArmorItem {
 		public Helmet() {
 			super(ArmorItem.Type.HELMET, new Item.Properties());
 		}
@@ -87,7 +87,7 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 				@Override
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+							Map.of("head", new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
@@ -102,16 +102,16 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 		@Override
 		public void appendHoverText(ItemStack itemstack, Level level, List<Component> list, TooltipFlag flag) {
 			super.appendHoverText(itemstack, level, list, flag);
-			list.add(Component.literal("\u00A78Mark V (5)"));
+			list.add(Component.literal("\u00A78Mark VI (6)"));
 		}
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "forged_reactor:textures/entities/mk5_armor.png";
+			return "forged_reactor:textures/entities/mk6_armor.png";
 		}
 	}
 
-	public static class Chestplate extends Mk5IronArmorItem {
+	public static class Chestplate extends Mk6IronArmorItem {
 		public Chestplate() {
 			super(ArmorItem.Type.CHESTPLATE, new Item.Properties());
 		}
@@ -122,9 +122,9 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).Body, "left_arm",
-							new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).LeftArm, "right_arm",
-							new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).Body, "left_arm",
+							new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).LeftArm, "right_arm",
+							new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -137,16 +137,16 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 		@Override
 		public void appendHoverText(ItemStack itemstack, Level level, List<Component> list, TooltipFlag flag) {
 			super.appendHoverText(itemstack, level, list, flag);
-			list.add(Component.literal("\u00A78Mark V (5)"));
+			list.add(Component.literal("\u00A78Mark VI (6)"));
 		}
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "forged_reactor:textures/entities/mk5_armor.png";
+			return "forged_reactor:textures/entities/mk6_armor.png";
 		}
 	}
 
-	public static class Leggings extends Mk5IronArmorItem {
+	public static class Leggings extends Mk6IronArmorItem {
 		public Leggings() {
 			super(ArmorItem.Type.LEGGINGS, new Item.Properties());
 		}
@@ -158,8 +158,8 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -173,16 +173,16 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 		@Override
 		public void appendHoverText(ItemStack itemstack, Level level, List<Component> list, TooltipFlag flag) {
 			super.appendHoverText(itemstack, level, list, flag);
-			list.add(Component.literal("\u00A78Mark V (5)"));
+			list.add(Component.literal("\u00A78Mark VI (6)"));
 		}
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "forged_reactor:textures/entities/mk5_armor.png";
+			return "forged_reactor:textures/entities/mk6_armor.png";
 		}
 	}
 
-	public static class Boots extends Mk5IronArmorItem {
+	public static class Boots extends Mk6IronArmorItem {
 		public Boots() {
 			super(ArmorItem.Type.BOOTS, new Item.Properties());
 		}
@@ -194,8 +194,8 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modelmk5_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk5_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelmk6_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk6_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -209,12 +209,12 @@ public abstract class Mk5IronArmorItem extends ArmorItem {
 		@Override
 		public void appendHoverText(ItemStack itemstack, Level level, List<Component> list, TooltipFlag flag) {
 			super.appendHoverText(itemstack, level, list, flag);
-			list.add(Component.literal("\u00A78Mark V (5)"));
+			list.add(Component.literal("\u00A78Mark VI (6)"));
 		}
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "forged_reactor:textures/entities/mk5_armor.png";
+			return "forged_reactor:textures/entities/mk6_armor.png";
 		}
 	}
 }
